--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,6 +7,5 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
-    <color name="fragment_1">#2196F3</color>
-    <color name="fragment_2">#009688</color>
+    <color name="black_shade_1">#292036</color>
 </resources>
