Fix weather fragment design

--- a/app/src/main/res/drawable/card.xml
+++ b/app/src/main/res/drawable/card.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle">
-<corners android:radius="10dp"/>
-    <solid android:color="#FF292036"/>
-
+        <gradient android:startColor="#007CDB"
+            android:endColor="#006AB0"
+            />
 </shape>
