--- a/app/src/main/res/layout/weather_fragment.xml
+++ b/app/src/main/res/layout/weather_fragment.xml
@@ -1,104 +1,185 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools"
+    android:background="@drawable/background">
 
-<!--    <ImageView-->
-<!--        android:layout_width="match_parent"-->
-<!--        android:layout_height="match_parent"-->
-<!--        android:scaleType="centerCrop"-->
-<!--        android:src="@color/black_shade_1"-->
-<!--        android:id="@+id/imageBlack"/>-->
+    <androidx.cardview.widget.CardView
+        android:layout_width="match_parent"
+    android:layout_height="160dp"
+    android:layout_marginTop="20dp"
+    android:layout_marginEnd="20dp"
+    android:layout_marginStart="20dp"
+    app:cardCornerRadius="8dp">
+    <LinearLayout
+        android:orientation="vertical"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="@drawable/background_card">
 
-<!--    <TextView-->
-<!--        android:id="@+id/textView"-->
-<!--        android:layout_width="match_parent"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        android:layout_marginTop="30dp"-->
-<!--        android:text="@string/city"-->
-<!--        android:padding="20dp"-->
-<!--        android:textSize="20sp"-->
-<!--        android:textStyle="bold"-->
-<!--        android:textAlignment="center"-->
-<!--        android:gravity="center"-->
-<!--        android:textColor="@color/white"/>-->
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="144dp"
+            android:layout_marginStart="20dp"
+            android:layout_marginTop="20dp"
+            android:layout_marginEnd="30dp"
+            android:orientation="vertical">
 
-<!--&lt;!&ndash;    <TextView&ndash;&gt;-->
-<!--&lt;!&ndash;        android:id="@+id/latLong"&ndash;&gt;-->
-<!--&lt;!&ndash;        android:layout_width="match_parent"&ndash;&gt;-->
-<!--&lt;!&ndash;        android:layout_height="wrap_content"&ndash;&gt;-->
-<!--&lt;!&ndash;        android:layout_marginTop="30dp"&ndash;&gt;-->
-<!--&lt;!&ndash;        android:text="LatLong"&ndash;&gt;-->
-<!--&lt;!&ndash;        android:padding="10dp"&ndash;&gt;-->
-<!--&lt;!&ndash;        android:textSize="15sp"&ndash;&gt;-->
-<!--&lt;!&ndash;        android:layout_below="@id/textView"&ndash;&gt;-->
-<!--&lt;!&ndash;        android:textAlignment="center"&ndash;&gt;-->
-<!--&lt;!&ndash;        android:gravity="center"&ndash;&gt;-->
-<!--&lt;!&ndash;        android:textColor="@color/white"/>&ndash;&gt;-->
+            <TextView
+                android:id="@+id/city"
+                android:layout_width="347dp"
+                android:layout_height="wrap_content"
+                android:layout_margin="2dp"
+                android:text="Cape Town"
+                android:textAlignment="center"
+                android:textColor="@color/white"
+                android:textSize="23sp"
+                android:textStyle="bold" />
 
-<!--    <LinearLayout-->
-<!--        android:layout_width="match_parent"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        android:orientation="horizontal"-->
-<!--        android:id="@+id/linearLayout"-->
-<!--        android:weightSum="5"/>-->
+            <TextView
+                android:id="@+id/country"
+                android:layout_width="354dp"
+                android:layout_height="wrap_content"
+                android:layout_margin="3dp"
+                android:text="South Africa"
+                android:textAlignment="center"
+                android:textColor="@color/white"
+                android:textSize="18sp" />
 
-<!--    <TextView-->
-<!--        android:layout_width="match_parent"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        android:id="@+id/temperature"-->
-<!--        android:text="23"-->
-<!--        android:textColor="@color/white"-->
-<!--        android:layout_below="@id/linearLayout"-->
-<!--        android:layout_margin="100dp"-->
-<!--        android:padding="5dp"-->
-<!--        android:gravity="center_horizontal"-->
-<!--        android:textSize="70dp"/>-->
+            <TextView
+                android:id="@+id/date"
+                android:layout_width="354dp"
+                android:layout_height="wrap_content"
+                android:layout_margin="5dp"
+                android:text="2022-02-22"
+                android:textAlignment="center"
+                android:textColor="@color/white"
+                android:textSize="18sp" />
+        </LinearLayout>
+    </LinearLayout>
+    </androidx.cardview.widget.CardView>
 
-<!--    <ImageView-->
-<!--        android:id="@+id/imageView"-->
-<!--        android:layout_width="wrap_content"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        android:layout_below="@id/temperature"-->
-<!--        android:layout_centerHorizontal="true"-->
-<!--        android:layout_marginStart="8dp"-->
-<!--        android:layout_marginTop="2dp"-->
-<!--        android:layout_marginEnd="8dp"-->
-<!--        android:layout_marginBottom="8dp"-->
-<!--        android:src="@mipmap/ic_launcher" />-->
+    <LinearLayout
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:orientation="horizontal">
 
-<!--    <TextView-->
-<!--        android:layout_width="match_parent"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        android:id="@+id/condition"-->
-<!--        android:layout_margin="10dp"-->
-<!--        android:gravity="center"-->
-<!--        android:textAlignment="center"-->
-<!--        android:text="Condition"-->
-<!--        android:textColor="@color/white"-->
-<!--        android:layout_below="@id/imageView"/>-->
-<!--    <TextView-->
-<!--        android:layout_width="match_parent"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        android:layout_margin="8dp"-->
-<!--        android:layout_marginBottom="18dp"-->
-<!--        android:text="Weather Forecast"-->
-<!--        android:layout_above="@id/recycleView"-->
-<!--        android:textColor="@color/white"-->
-<!--        android:textStyle="bold"/>-->
+        <androidx.cardview.widget.CardView
+            android:id="@+id/temp_card"
+            android:layout_width="wrap_content"
+            android:layout_height="75dp"
+            android:layout_marginStart="20dp"
+            android:layout_marginTop="350dp"
+            app:cardBackgroundColor="#399FED"
+            app:cardCornerRadius="20dp">
+
+            <TextView
+                android:id="@+id/temp"
+                android:layout_width="103dp"
+                android:layout_height="wrap_content"
+                android:text="Temp "
+                android:textAlignment="center"
+                android:textColor="@color/white"
+                android:textSize="16sp"
+                android:textStyle="bold" />
+
+            <TextView
+                android:id="@+id/temperature_value"
+                android:layout_width="38dp"
+                android:layout_height="30dp"
+                android:layout_below="@+id/temp"
+                android:layout_centerVertical="true"
+                android:layout_margin="40dp"
+                android:gravity="center_horizontal"
+                android:text="33"
+                android:textAlignment="center"
+                android:textColor="@color/white"
+                android:textSize="14sp"
+                android:textStyle="bold" />
+        </androidx.cardview.widget.CardView>
+
+        <androidx.cardview.widget.CardView
+            android:layout_width="111dp"
+            android:layout_height="75dp"
+            android:layout_marginStart="20dp"
+            android:layout_marginTop="350dp"
+            app:cardBackgroundColor="#399FED"
+            app:cardCornerRadius="20dp">
+
+            <TextView
+                android:id="@+id/pressure"
+                android:layout_width="88dp"
+                android:layout_height="wrap_content"
+                android:layout_margin="10dp"
+                android:text="Pressure"
+                android:textAlignment="center"
+                android:textColor="@color/white"
+                android:textSize="16sp"
+                android:textStyle="bold" />
+
+            <TextView
+                android:id="@+id/pressure_value"
+                android:layout_width="42dp"
+                android:layout_height="30dp"
+                android:layout_below="@+id/pressure"
+                android:layout_centerVertical="true"
+                android:layout_margin="40dp"
+                android:gravity="center_horizontal"
+                android:text="67"
+                android:textAlignment="center"
+                android:textColor="@color/white"
+                android:textSize="14sp"
+                android:textStyle="bold" />
+        </androidx.cardview.widget.CardView>
+
+        <androidx.cardview.widget.CardView
+            android:layout_width="wrap_content"
+            android:layout_height="75dp"
+            android:layout_marginStart="20dp"
+            android:layout_marginTop="350dp"
+            app:cardBackgroundColor="#399FED"
+            app:cardCornerRadius="20dp">
+
+            <TextView
+                android:id="@+id/humidity"
+                android:layout_width="94dp"
+                android:layout_height="wrap_content"
+                android:layout_margin="10dp"
+                android:text="Humidity"
+                android:textAlignment="center"
+                android:textColor="@color/white"
+                android:textSize="16sp"
+                android:textStyle="bold" />
+
+            <TextView
+                android:id="@+id/humidity_value"
+                android:layout_width="42dp"
+                android:layout_height="30dp"
+                android:layout_below="@+id/humidity"
+                android:layout_centerVertical="true"
+                android:layout_margin="38dp"
+                android:gravity="center_horizontal"
+                android:text="45"
+                android:textAlignment="center"
+                android:textColor="@color/white"
+                android:textSize="14sp"
+                android:textStyle="bold" />
+        </androidx.cardview.widget.CardView>
+    </LinearLayout>
 
     <androidx.recyclerview.widget.RecyclerView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:id="@+id/recycleView"
+        android:padding="20dp"
+        android:orientation="horizontal"
         android:layout_alignParentBottom="true"
         app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
-         tools:listitem="@layout/weather_list_items"
-       tools:itemCount="2"
+        tools:listitem="@layout/weather_list_items"
+        tools:itemCount="2"
         />
-
     <ProgressBar
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -109,4 +190,5 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         android:visibility="gone"/>
-</androidx.constraintlayout.widget.ConstraintLayout>
+
+</RelativeLayout>
