--- a/app/src/main/res/layout/weather_list_items.xml
+++ b/app/src/main/res/layout/weather_list_items.xml
@@ -1,61 +1,62 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="100dp"
+    android:layout_width="150dp"
+    android:layout_height="match_parent">
+<androidx.cardview.widget.CardView
+    android:layout_width="match_parent"
     android:layout_gravity="center"
-    android:layout_margin="4dp"
-    app:cardElevation="6dp"
-    android:background="@android:color/transparent"
-    android:layout_height="100dp">
+    android:layout_margin="6dp"
+    android:layout_marginBottom="15dp"
+    android:layout_height="140dp"
+    app:cardCornerRadius="18dp">
 
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@drawable/card"
+        android:background="#449FE4"
     >
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/time"
-            android:text="Time"
+            android:id="@+id/main"
+            android:text="20"
             android:layout_gravity="center"
-            android:padding="4dp"
+            android:padding="2dp"
+            android:layout_marginBottom="3dp"
             android:textColor="@color/white"
+            android:textSize="15sp"
+            android:textStyle="bold"
             android:textAlignment="center"/>
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/temperature"
-        android:text="20"
-        android:layout_gravity="center"
-        android:padding="4dp"
-        android:textColor="@color/white"
-        android:textSize="20sp"
-        android:layout_below="@+id/time"
-        android:textAlignment="center"/>
 
     <ImageView
-        android:layout_width="40dp"
-        android:id="@+id/condition"
-        android:layout_height="40dp"
-        android:layout_below="@+id/temperature"
+        android:layout_width="75dp"
+        android:id="@+id/icon"
+        android:layout_height="75dp"
         android:layout_centerHorizontal="true"
         android:layout_margin="5dp"
-        android:padding="4dp"
-        android:src="@mipmap/ic_launcher"/>
+        android:layout_marginBottom="3dp"
+        android:padding="2dp"
+        android:layout_below="@+id/main"
+        />
 
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/wind_speed"
+        android:id="@+id/description"
+        android:padding="2dp"
         android:text="13"
-        android:padding="3dp"
         android:layout_centerHorizontal="true"
         android:layout_gravity="center"
-        android:layout_margin="4dp"
+        android:layout_margin="2dp"
+        android:textSize="15sp"
+        android:textStyle="bold"
+        android:layout_marginBottom="1dp"
+        android:layout_below="@+id/icon"
         android:textColor="@color/white"
-        android:layout_below="@+id/condition"
         android:textAlignment="center"/>
     </RelativeLayout>
 
 </androidx.cardview.widget.CardView>
+</RelativeLayout>
