--- a/app/src/main/res/layout/weather_fragment.xml
+++ b/app/src/main/res/layout/weather_fragment.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -8,70 +8,55 @@
 
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
-    android:layout_height="160dp"
-    android:layout_marginTop="20dp"
+    android:layout_height="310dp"
+        app:layout_constraintEnd_toEndOf="parent"
+    android:layout_marginTop="120dp"
     android:layout_marginEnd="20dp"
-    android:layout_marginStart="20dp"
-    app:cardCornerRadius="8dp">
-    <LinearLayout
-        android:orientation="vertical"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@drawable/background_card">
-
+        app:layout_constraintStart_toStartOf="parent"
+        android:layout_marginStart="20dp"
+    app:cardCornerRadius="10dp"
+        android:background="@drawable/background_card"
+        app:layout_constraintTop_toTopOf="parent">
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="144dp"
-            android:layout_marginStart="20dp"
-            android:layout_marginTop="20dp"
-            android:layout_marginEnd="30dp"
+            android:layout_height="316dp"
+            android:background="@drawable/background_card"
             android:orientation="vertical">
 
             <TextView
                 android:id="@+id/city"
-                android:layout_width="347dp"
+                android:layout_width="370dp"
                 android:layout_height="wrap_content"
-                android:layout_margin="2dp"
+                android:layout_marginTop="110dp"
                 android:text="Cape Town"
                 android:textAlignment="center"
                 android:textColor="@color/white"
-                android:textSize="23sp"
+                android:textSize="22sp"
                 android:textStyle="bold" />
 
             <TextView
                 android:id="@+id/country"
-                android:layout_width="354dp"
+                android:layout_width="370dp"
                 android:layout_height="wrap_content"
-                android:layout_margin="3dp"
+                android:layout_marginTop="30dp"
                 android:text="South Africa"
                 android:textAlignment="center"
                 android:textColor="@color/white"
-                android:textSize="18sp" />
-
-            <TextView
-                android:id="@+id/date"
-                android:layout_width="354dp"
-                android:layout_height="wrap_content"
-                android:layout_margin="5dp"
-                android:text="2022-02-22"
-                android:textAlignment="center"
-                android:textColor="@color/white"
-                android:textSize="18sp" />
+                android:textSize="20sp" />
         </LinearLayout>
-    </LinearLayout>
     </androidx.cardview.widget.CardView>
 
     <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recycleView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/recycleView"
-        android:padding="20dp"
-        android:orientation="horizontal"
         android:layout_alignParentBottom="true"
+        android:orientation="horizontal"
+        android:padding="20dp"
         app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
-        tools:listitem="@layout/weather_list_items"
+        app:layout_constraintBottom_toBottomOf="parent"
         tools:itemCount="2"
-        />
+        tools:listitem="@layout/weather_list_items" />
     <ProgressBar
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -83,4 +68,4 @@
         app:layout_constraintEnd_toEndOf="parent"
         android:visibility="gone"/>
 
-</RelativeLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
