Add Weather List Adapter

--- a/app/src/main/res/layout/weather_details_fragment.xml
+++ b/app/src/main/res/layout/weather_details_fragment.xml
@@ -208,6 +208,6 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        android:visibility="gone"/>
+        android:visibility="visible"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
